--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -301,7 +301,7 @@ header {
             height: 75vh;
             background-image: url(../images/naujos_03.2020/6.jpg);
             background-size: cover;
-            background-position: %;
+            background-position: center center;
             background-repeat: no-repeat;
         }
 }
